--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Metadata
-title: "SirRandoo's Purchase List"
+title: "Saschahis List"
 favicon: assets/img/favicon.png
 description: >-
   An expanded item list for TwitchToolkit that supports most ToolkitUtils' shop.
 
-baseurl: '/itemlist' # the subpath of your site, e.g. /blog
+baseurl: '/rimworldutilslist' # the subpath of your site, e.g. /blog
 url: '' # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ''
-github_username: 'sirrandoo'
+github_username: 'saschahi'
 
 # Item list settings
 store:
